# sha3bit

./: .readthedocs.yaml  README.md  build  hatch.toml  lint  pyproject.toml  requirements.txt
.github/workflows/: build.yml  test.yml
docs/: Pipfile  requirements.txt
docs/source/: api.rst  conf.py  examples_cli.rst  examples_python3.rst  index.rst  installation.rst
sha3bit/: __init__.py  cli.py
test/: test.py  test_api.py  test_api_xof.py  test_api_xof_absorb.py  test_cavp.py  test_cavp_xof.py  test_hardcoded.py  test_sha3_vs_hashlib.py  test_shake_vs_hashlib.py
